[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
mongodb = "3.1.0"
tokio = "1.41.0"
anyhow = "1.0.91"
serde_json = "1.0.109"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
indexmap = "2.6.0"
serde = "1.0.213"
