[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
teloxide = { version =  "0.12.2", features = ["macros"] }
log = { version = "0.4.22", features = [] }
indexmap = { version = "2.5.0", features = ["serde"] }
env_logger = "0.11.5"
async_once = "0.2.6"
lazy_static = "1.5.0"
mongodb = "3.1.0"
serde = "1.0.210"
thiserror = "1.0.63"
futures = "0.3.30"
base64 = "0.22.1"
chrono = "0.4.38"
reqwest = { version = "0.12.7", features = ["json"]}
